last commit "Dogglers app"

--- a/app/src/main/res/layout/vertical_horizontal_list_item.xml
+++ b/app/src/main/res/layout/vertical_horizontal_list_item.xml
@@ -53,7 +53,8 @@
                 The dog's hobbies-->
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/textName"
+            style="@style/Widget.Dogglers.TextName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -65,21 +66,22 @@
 
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/textAge"
+            style="@style/Widget.Dogglers.TextAge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="8dp"
-            app:layout_constraintStart_toStartOf="@+id/textView1"
-            app:layout_constraintTop_toBottomOf="@+id/textView1"
+            app:layout_constraintStart_toStartOf="@+id/textName"
+            app:layout_constraintTop_toBottomOf="@+id/textName"
             tools:text="@string/dog_age" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/textHobbies"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="@+id/imageId"
-            app:layout_constraintTop_toBottomOf="@+id/textView1"
+            app:layout_constraintTop_toBottomOf="@+id/textName"
             tools:text="@string/dog_hobbies" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
